tests/pyright/fail/materialize_kind_must_be_known_literal.py
from __future__ import annotations

from dataclasses import dataclass

import polars as pl

from planframe_polars import from_polars


@dataclass(frozen=True)
class UserSchema:
    id: int
    age: int


lf = pl.DataFrame({"id": [1], "age": [2]}).lazy()
pf = from_polars(lf, schema=UserSchema)

# This should fail: kind is a Literal["dataclass", "pydantic"].
Out = pf.materialize_model("Out", kind="nope")

